--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,4 @@ Thumbs.db
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-nxp-air-frontend/
-js/*.min.js
-css/*.css
-/byvue/node_modules
-/byvue/dist
+node_modules
